# ada-proyecto-mini-prolog

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
pkg/: CMakeLists.txt
pkg/arch/: PKGBUILD
pkg/ubuntu/: CMakeLists.txt
src/: CMakeLists.txt  ast.h  compiler.hpp  lexer.l  main.cpp  mini_prolog.hpp  parser.y
src/ast/: CMakeLists.txt  character_list.c  character_list.h  id.h  prolog.c  prolog.h  rule.c  rule.h  rule_list.c  rule_list.h
src/compiler/: parser.h
src/mini_prolog/: CMakeLists.txt  compiler.cpp  compiler.hpp  executor.cpp  executor.hpp  mini_prolog.cpp  mini_prolog.hpp  trie.cpp  trie.hpp  trie_map.cpp  trie_map.hpp
